--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,193 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SagarMhatreMockTest</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- ===== BOOTSTRAP 5 CSS ===== -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+        <!-- ===== BOX ICONS ===== -->
+        <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+
+        <!-- ===== CSS ===== -->
+        <link rel="stylesheet" href="assets/css/styles.css">
+
+        <title>Sagar Mhatre Mock Test</title>
+    </head>
+    <body id="body-pd" class="body-pd">
+        <!-- <header class="header body-pd" id="header">
+            <div class="header__toggle">
+                <i class='bx bx-x' id="header-toggle"></i>
+            </div>
+
+            <div class="header__img">
+                <img src="assets/img/perfil.jpg" alt="">
+            </div>
+        </header> -->
+
+        <div class="l-navbar show" id="nav-bar">
+            <nav class="nav">
+                <div class="mt-2">
+                    <a href="#" class="nav__logo">
+                        <span class="nav__logo-name">Interface</span>
+                        <i class='bx bx-layer nav__logo-icon'></i>
+                    </a>
+
+                    <div class="nav__list">
+                        <a href="#" class="nav__link active">
+                        <i class='bx bx-grid-alt nav__icon' ></i>
+                            <span class="nav__name">Dashboard</span>
+                        </a>
+
+                        <a href="#" class="nav__link">
+                            <i class='bx bx-user nav__icon' ></i>
+                            <span class="nav__name">Profile</span>
+                        </a>
+                        
+                        <a href="#" class="nav__link">
+                            <i class='bx bx-wrench nav__icon' ></i>
+                            <span class="nav__name">Setting</span>
+                        </a>
+
+                        <a href="#" class="nav__link">
+                            <i class='bx bx-cloud nav__icon' ></i>
+                            <span class="nav__name">Cloud</span>
+                        </a>
+
+                        <a href="#" class="nav__link">
+                            <i class='bx bx-message-square-detail nav__icon' ></i>
+                            <span class="nav__name">Messages</span>
+                        </a>
+
+                        <!-- <a href="#" class="nav__link">
+                            <i class='bx bx-bar-chart-alt-2 nav__icon' ></i>
+                            <span class="nav__name">Analytics</span>
+                        </a>
+
+                        <a href="#" class="nav__link">
+                            <i class='bx bx-log-out nav__icon' ></i>
+                            <span class="nav__name">Log Out</span>
+                        </a> -->
+                    </div>
+                    <div class="bottom_left">
+                        <a href="#" class="nav__link">
+                            <i class='bx bx-plus nav__icon' ></i>
+                            <span class="nav__name">New Item</span>
+                        </a>
+                        <p>Click '+' to creat your new item</p>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <div class="main px-xl-5">
+            <div class="row">
+                <div class="col-xl-6 col-md-6 col-12">
+
+                </div>
+                <div class="col-xl-6 col-md-6 col-12">
+                    <div class="d-flex flex-wrap justify-content-between align-items-center">
+                        <div class="search">
+                            <span class="bx bx-search"></span>
+                            <input placeholder="&nbsp;&nbsp;&nbsp;search">
+                        </div>
+                        <a href="" class="picon"><img src="assets/img/notif.png" alt=""></a>
+                        <a href="" class="picon"><img src="assets/img/picon.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-xl-6 col-md-6 col-12">
+                    <h1 class="mb-0">Hello Tam</h1>
+                    <span class="subtext">Have a nice day at work</span>
+
+                    <div class="d-flex flex-wrap justify-content-between align-items-center mt-5">
+                        <div class="switch-button">
+                            <span class="active_b"></span>
+                            <button class="switch-button-case left active-case active_b-case">Your Pro</button>
+                            <button class="switch-button-case right">Portfolio</button>
+                        </div>
+                        <i class='bx bx-dots-horizontal-rounded threed' ></i>
+                    </div>
+                    <div class="first mt-2">
+                        <img class="man1" src="assets/img/1.png" alt="">
+                        <div class="d-flex flex-wrap justify-content-between align-items-center first_bottom">
+                            <i class='bx bx-dots-horizontal-rounded' ></i>
+                            <div class="p-3">
+                                <h5 class="mb-0 text-white">Renew your Pro Account</h5>
+                                <p class="renew mb-0">$99.00 for on additional your</p>
+                            </div>
+                            <a href="#" class="renewbtn p-3 m-1">Renew Account</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-md-6 col-12">
+                    <span class="headtext">Your Earning</span>
+                    <div class="d-flex flex-wrap justify-content-between align-items-center">
+                        <img class="sec2" src="assets/img/2.png" alt="">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-12">
+                            <span class="headtext">Your Best Month</span>
+                            <div class="d-flex justify-content-between align-items-center flex-wrap right2">
+                                <i class='bx bxl-gitlab rightico mt-2 mb-2 ml-3' ></i>
+                                <div class="mt-2 mb-2">
+                                    <h5 class="font-weight-bold mb-0">$24.89</h5>
+                                    <p class="text-secondary mb-0">February</p>
+                                </div>
+                                <div class="right-3">
+                                    <i class='bx bx-dots-horizontal-rounded' ></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-12">
+                            <span class="headtext">Your Best Tool</span>
+                            <div class="d-flex justify-content-between align-items-center flex-wrap right3">
+                                <i class='bx bxl-gitlab rightico mt-2 mb-2 ml-3' ></i>
+                                <div class="mt-2 mb-2">
+                                    <h5 class="font-weight-bold mb-0">$129.00</h5>
+                                    <p class="text-secondary mb-0">Sketch App</p>
+                                </div>
+                                <div class="right-3">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-3 pt-5">
+                        <span class="headtext">Your Top Items</span>
+                        <div class="p-2 bg-white">
+                            <div class="btom d-flex justify-content-between align-items-center p-2">
+                                <span class="headtext">Your Earning</span>
+                                <span class="headtext">Your Earning</span>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mt-2 p-2 flex-wrap">
+                                <i class='bx bx-fullscreen' ></i>
+                                <div class="tnt">
+                                    <h5 class="mb-0">Thefox 6 templets</h5>
+                                    <span class="mb-0">Sketch App</span>
+                                </div>
+                                <h4 class="mb-0">$17.58</h4>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mt-2 p-2 flex-wrap">
+                                <i class='bx bx-fullscreen' ></i>
+                                <div class="tnt">
+                                    <h5 class="mb-0">Dashboard Interface</h5>
+                                    <span class="mb-0">Sketch App</span>
+                                </div>
+                                <h4 class="mb-0">$17.58</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!--===== BOOTSTRAP JS =====-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+        <!--===== MAIN JS =====-->
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
