--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <!-- ===== CSS ===== -->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Sagar Mhatre Mock Test</title>
+        <title>Sagar Mhatre Mock-Test</title>
     </head>
     <body id="body-pd" class="body-pd">
         <!-- <header class="header body-pd" id="header">
